--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,9 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>{{ page.title }}</title>
-    <script src='/js/bootstrap.min.js' type='text/javascript'></script>
-    <script src='/js/ejs.js' type='text/javascript'></script>
-    <script src='/js/Underscore.js' type='text/javascript'></script>
+    <script src='/js/powers_of.min.js' type='text/javascript'></script>
     <link rel='stylesheet' href='/css/bootstrap.min.css' type='text/css' media='screen'/>
   </head>
   <body>
