--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,13 @@
     <title>{{ page.title }}</title>
     <script src='/js/powers_of.min.js' type='text/javascript'></script>
     <link rel='stylesheet' href='/css/bootstrap.min.css' type='text/css' media='screen'/>
+
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/manifest.json">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="theme-color" content="#000000">
   </head>
   <body>
     <div class="navbar navbar-light bg-light" role="navigation">
